apps/http-logger/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: http-logger
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: http-logger
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: http-logger-ingress
  namespace: http-logger
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: http-logger
      app.kubernetes.io/instance: http-logger
      app.kubernetes.io/name: http-logger
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
